--- a/style.css
+++ b/style.css
@@ -7,35 +7,56 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  padding-top: 80px;
   transform: scale(0.9);
   transform-origin: top center;
 }
 
 header {
   position: relative;
-    background-color: #222;
-    color: white;
-    text-align: center;
-    padding: 20px 0;
+  color: white;
+  text-align: left;
+  padding: 20px 0;
+  margin-top: 150px;
+}
+
+.logo {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+}
+
+.logo img {
+  height: 100px;
+}
+
+.begin  { 
+  font-family: monospace;
+  color: #6f6ff5;
 }
 
 h1 {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0;
-    text-align: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 0;
+  text-align: left;
 }
 
-h2 {
+.subtitle1 {
   font-family: monospace;
-    margin: 0;
-    text-align: center;
+  margin: 0;
+  text-align: left;
 }
 
-/* Navigatiebalk */
 .navbar {
-  position: absolute;
-  bottom: 10px; /* Afstand van de onderkant van de header */
-  right: 20px; /* Afstand van de rechterkant van de header */
+  position: fixed;
+  top: 0;
+  right: 0;
+  padding: 15px 20px;
+  z-index: 1000;
+  text-align: right;
+  width: auto;
+  box-sizing: border-box;
+  max-width: 100%;
 }
 
 .navbar ul {
@@ -45,6 +66,7 @@ h2 {
   font-family: 'Times New Roman', Times, serif;
   padding: 0;
   margin: 0;
+  flex-wrap: wrap;
 }
 
 .navbar li {
@@ -60,12 +82,11 @@ h2 {
 .navbar a:hover {
   color: rgb(151, 70, 8);
 }
-/* Dropdown */
+
 .dropdown {
   position: relative;
 }
 
-/* Stijl voor de taalkeuze dropdown */
 .select-box {
   display: flex;
   align-items: center;
@@ -118,16 +139,71 @@ h2 {
   display: block;
 }
 
-  
-  
+.about-container h3 {
+  background-image: url('about-background.gif');
+  background-size: cover;
+  background-position: center;
+  padding: 30px;
+  border-radius: 10px;
+  text-align: center;
+  width: 100%;
+  box-sizing: border-box;
+}
 
+@media (max-width: 768px) {
+  .navbar {
+      width: auto;
+      right: 0;
+      top: 0;
+      text-align: right;
+      position: fixed;
+      overflow-x: auto;
+      white-space: nowrap;
+      padding-right: 10px;
+  }
+
+  .navbar ul {
+      flex-direction: row;
+      justify-content: flex-end;
+  }
+
+  .navbar li {
+      margin: 0 5px;
+  }
+
+  .logo img {
+      height: 80px;
+  }
+
+  header h1, header .subtitle1 {
+      text-align: left;
+      padding-left: 10px;
+  }
+
+  .select-box img {
+      width: 20px;
+      height: 15px;
+  }
+
+  .about-container h3 {
+      background-image: url('about-background.gif');
+      background-size: cover;
+      background-position: center;
+  }
+}
+
+@media (min-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+}
 
 section {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: flex-start; /* Zorg ervoor dat de inhoud meer naar boven wordt geplaatst */
+    align-items: flex-start;
     color: white;
     opacity: 0;
     transition: opacity 1s ease-in-out;
@@ -138,7 +214,7 @@ section {
 #about {
   width: 100%;
   max-width: 1000px;
-  margin: 50px auto 0; /* Negatieve marge om het naar boven te verschuiven */
+  margin: 50px auto 0;
   padding: 30px;
 }
 
@@ -160,7 +236,6 @@ section {
   word-wrap: break-word;
 }
 
-
 .about-container h3 {
   background-image: url('about-background.gif');
   background-size: cover;
@@ -171,10 +246,6 @@ section {
   width: 100%;
   box-sizing: border-box;
 }
-
-
-
-
 
 h3 {
     font-size: 2.5em;
@@ -195,16 +266,3 @@ p {
     background-color: #222;
 }
 
-ul {
-    list-style-type: square;
-    padding-left: 20px;
-}
-
-a {
-    color: #000000;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
